# cac

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  bootstrap-localstack.sh  docker-compose.yml  document_classifier.py  opensearch.Dockerfile  pyproject.toml  scrape_outcomes.py
pipeline/: .dockerignore  .gitignore  augment_outcomes.py  cac_sqlite_pipeline.py  document_classifier.py  event_machine_testing.py  event_state_diagram.py  fetch_certified_unions.py  index_derived_data.py  index_withdrawals_spreadsheet.py  known_bad_data.md  lambda.Dockerfile  lambda_functions.py  merge_withdrawals.py  opensearch_pipeline.py  pyproject.toml  reindex_companies.py  scrape_outcomes.py  search_companies_house.py
pipeline/baml_src/: acceptance_decision.baml  access_decision_or_dispute.baml  application.baml  application_received.baml  bargaining_decision.baml  bargaining_unit_decision.baml  clients.baml  common.baml  company_disambiguation.baml  form_of_ballot_decision.baml  generators.baml  para_35_decision.baml  recognition_decision.baml  validity_decision.baml  whether_to_ballot_decision.baml
pipeline/extractors/: __init__.py  date_extractor.py
pipeline/index_mappings/: application_withdrawals.json  disambiguated_companies.json  outcomes.json  outcomes_augmented.json  outcomes_indexed.json  outcomes_raw.json
pipeline/lambdas/: scrape_all_outcomes.py
pipeline/scripts/: common.py  event_state_diagram.py  index_withdrawals_spreadsheet.py  reindex_companies.py  reindex_outcomes.py  search_companies_house.py
pipeline/services/: fnv.py  opensearch_connectors.py  opensearch_pipeline.py  opensearch_utils.py
pipeline/spider/: cac_outcome_spider.py  scrape_outcomes.py  scrape_updated_outcomes.py
pipeline/src/company_disambiguator/: companies_house.py  hashing.py  model.py  operations.py  pipeline.py  sic_codes.py
pipeline/src/company_disambiguator/data/: sic_codes.json
pipeline/src/lambdas/: __init__.py  augmenter.py  company_disambiguator.py  indexer.py  scraper.py
pipeline/src/pipeline/: __init__.py  decisions_to_outcomes.py
pipeline/src/pipeline/extractors/: __init__.py  date_extractor.py
pipeline/src/pipeline/services/: __init__.py  baml.py  companies_house.py  fnv.py  opensearch_connectors.py  opensearch_pipeline.py  opensearch_utils.py  secrets.py  sqs_pipeline.py
pipeline/src/pipeline/spider/: __init__.py  all_outcomes.py  cac_outcome_spider.py  scrape_all_outcomes.py  updated_outcomes.py
pipeline/src/pipeline/transforms/: __init__.py  augmentation.py  document_classifier.py  events.py  events_from_decision.py  events_machine.py  known_bad_data.py  labelled_enum.py  mock_augmentation.py  model.py  withdrawals.py
pipeline/src/pipeline/types/: decisions.py  documents.py  outcome.py
pipeline/test/: test_events_from_decision.py  test_events_from_outcome.py  test_fnv.py  test_merge_withdrawals.py  test_outcome_reference_key.py
pipeline/test/e2e/: __init__.py  conftest.py  test_augmenter.py  test_company_disambiguator.py  test_indexer.py  test_scraper.py
pipeline/test/extractors/: test_date_extractor.py
pipeline/test/fake_api/: Dockerfile  package-lock.json  package.json  tsconfig.json
pipeline/test/fake_api/src/: index.ts  (+3 more)
pipeline/test/llm_extractors/: conftest.py  test_acceptance_decision.py  test_application_received.py
pipeline/test/unit_integration/: test_date_extractor.py  test_events_from_decision.py  test_events_from_outcome.py  test_fnv.py  test_merge_decisions_to_outcomes.py  test_model.py  test_normalize_reference.py  test_retry_client.py
pipeline/transforms/: __init__.py  events.py  events_from_decision.py  events_machine.py  known_bad_data.py  labelled_enum.pyi  model.py  unions.py
(+183 files in other folders)
