[tool.poetry]
name = "cac"
version = "0.1.0"
description = ""
authors = ["Jamie Parkinson <j.parkinson@wellcome.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pipeline" }]

[tool.poetry.scripts]
scrape = "pipeline.scrape_outcomes:scrape"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
markdownify = "^0.12.1"
pymupdf4llm = "^0.0.5"
anthropic = "^0.30.0"
baml-py = "^0.45.0"
opensearch-py = {extras = ["async"], version = "^2.6.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
