[tool.poetry]
name = "cac"
version = "0.1.0"
description = ""
authors = ["Jamie Parkinson <j.parkinson@wellcome.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pipeline" }]

[tool.poetry.scripts]
ingest = "pipeline.scrape_outcomes:scrape"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
markdownify = "^1.1.0"
pymupdf4llm = "^0.0.17"
anthropic = "^0.49.0"
baml-py = "^0.90.1"
opensearch-py = {extras = ["async"], version = "^2.6.0"}
python-dotenv = "^1.0.1"
python-dateutil = "^2.9.0.post0"
bytewax = "^0.21.1"
tenacity = "^9.0.0"
pre-commit = "^3.8.0"
transitions = "^0.9.2"
boto3 = "^1.38.18"
plum-dispatch = "^2.5.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
certbot = "^4.0.0"
certbot-dns-route53 = "^4.0.0"
xlsx2csv = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dotenv]
ignore = "false"
location = "pipeline/.env"