[project]
name = "pipeline"
version = "0.1.0"
authors = [{ name = "Jamie Parkinson" }]
requires-python = "~=3.12.0"
license = "MIT"
dependencies = [
    "scrapy>=2.13.2,<3",
    "markdownify>=1.1.0,<2",
    "pymupdf4llm>=0.0.25,<0.0.26",
    "baml-py>=0.90.1,<0.91",
    "opensearch-py[async]>=2.6.0,<3",
    "python-dotenv>=1.0.1,<2",
    "python-dateutil>=2.9.0.post0,<3",
    "tenacity>=9.0.0,<10",
    "transitions>=0.9.2,<0.10",
    "boto3>=1.38.18,<2",
    "plum-dispatch>=2.5.7,<3",
    "pydantic>=2.11.7,<3",
    "httpx>=0.27.0,<0.28",
]

[dependency-groups]
dev = [
    "bytewax>=0.21.1,<0.22",
    "pre-commit>=3.8.0,<4",
    "pytest>=8.3.1,<9",
    "pytest-asyncio>=0.23.7,<0.24",
    "xlsx2csv>=0.8.4,<0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dotenv]
ignore = "false"
location = ".env"
