[project]
name = "pipeline"
version = "0.1.0"
authors = [{ name = "Jamie Parkinson" }]
requires-python = "~=3.13.0"
license = "MIT"
dependencies = [
    "scrapy>=2.14.1,<3",
    "markdownify>=1.1.0,<2",
    "pymupdf4llm>=0.0.25,<0.0.26",
    "baml-py==0.219.0",
    "opensearch-py[async]>=2.6.0,<3",
    "python-dotenv>=1.0.1,<2",
    "python-dateutil>=2.9.0.post0,<3",
    "tenacity>=9.0.0,<10",
    "transitions>=0.9.2,<0.10",
    "boto3>=1.38.18,<2",
    "plum-dispatch>=2.5.7,<3",
    "pydantic>=2.11.7,<3",
    "httpx>=0.27.0,<0.28",
    "crochet>=2.1.1",
    "polyfactory>=2.22.0",
    "aws-secretsmanager-caching (>=1.1.3,<2.0.0)",
    "async-batcher>=0.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4",
    "pytest>=8.3.1,<9",
    "pytest-asyncio>=1.0.0",
    "tqdm>=4.67.1",
    "xlsx2csv>=0.8.4,<0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dotenv]
ignore = "false"
location = ".env"
